Fix: html 요소에 scrollbar 속성 추가

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@ input, select, button {
 html {
   font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
+  scrollbar-gutter: stable;
 }
 
 body {
