--- a/assets/scss/base/_preset.scss
+++ b/assets/scss/base/_preset.scss
@@ -5,6 +5,7 @@
 html {
 	font-size: 62.5%;
 	-webkit-font-smoothing: antialiased;
+	scrollbar-gutter: stable;
 }
 
 body {
